y.output
Grammar

    0 $accept: program $end

    1 program: CLASS IDENTIFIER LBRACE class_body RBRACE

    2 class_body: ε
    3           | class_body field_decl
    4           | class_body method_decl
    5           | class_body SEMICOLON

    6 field_decl: PUBLIC STATIC type field_ids SEMICOLON
    7           | PUBLIC STATIC error SEMICOLON
    8           | PUBLIC STATIC type error SEMICOLON
    9           | error SEMICOLON

   10 field_ids: IDENTIFIER
   11          | field_ids COMMA IDENTIFIER

   12 lbrace_save: LBRACE

   13 method_decl: PUBLIC STATIC method_header method_body

   14 $@1: ε

   15 method_decl: PUBLIC STATIC VOID IDENTIFIER LPAR LSQ $@1 RSQ STRING IDENTIFIER RPAR method_body
   16            | PUBLIC STATIC type IDENTIFIER LPAR param_list lbrace_save method_body_items RBRACE
   17            | PUBLIC STATIC type IDENTIFIER LPAR lbrace_save method_body_items RBRACE
   18            | PUBLIC STATIC VOID IDENTIFIER LPAR param_list lbrace_save method_body_items RBRACE
   19            | PUBLIC STATIC VOID IDENTIFIER LPAR lbrace_save method_body_items RBRACE
   20            | PUBLIC STATIC type IDENTIFIER LPAR error RPAR method_body
   21            | PUBLIC STATIC VOID IDENTIFIER LPAR error RPAR method_body

   22 method_header: type IDENTIFIER LPAR RPAR
   23              | type IDENTIFIER LPAR param_list RPAR
   24              | VOID IDENTIFIER LPAR RPAR
   25              | VOID IDENTIFIER LPAR param_list RPAR

   26 param_list: param_decl
   27           | param_list COMMA param_decl

   28 param_decl: type IDENTIFIER
   29           | STRING LSQ RSQ IDENTIFIER
   30           | STRING LSQ NATURAL RSQ IDENTIFIER

   31 method_body: LBRACE method_body_items RBRACE

   32 method_body_items: ε
   33                  | method_body_items invalid_public_decl
   34                  | method_body_items var_decl
   35                  | method_body_items bad_string_start bad_string_tail
   36                  | method_body_items stmt

   37 bad_string_start: STRING

   38 bad_string_tail: bad_string_items RBRACE

   39 bad_string_items: ε
   40                 | bad_string_items bad_string_item

   41 bad_string_item: IDENTIFIER
   42                | NATURAL
   43                | DECIMAL
   44                | STRLIT
   45                | BOOLLIT
   46                | CLASS
   47                | PUBLIC
   48                | STATIC
   49                | RESERVED
   50                | BOOL
   51                | INT
   52                | DOUBLE
   53                | VOID
   54                | STRING
   55                | IF
   56                | ELSE
   57                | WHILE
   58                | RETURN
   59                | PRINT
   60                | PARSEINT
   61                | DOTLENGTH
   62                | INC
   63                | DEC
   64                | ARROW
   65                | ASSIGN
   66                | PLUS
   67                | MINUS
   68                | STAR
   69                | DIV
   70                | MOD
   71                | AND
   72                | OR
   73                | XOR
   74                | LSHIFT
   75                | RSHIFT
   76                | EQ
   77                | NE
   78                | LT
   79                | GT
   80                | LE
   81                | GE
   82                | NOT
   83                | LPAR
   84                | RPAR
   85                | LBRACE bad_string_items RBRACE
   86                | LSQ
   87                | RSQ
   88                | SEMICOLON
   89                | COMMA

   90 $@2: ε

   91 invalid_public_decl: PUBLIC $@2 invalid_public_tail

   92 invalid_public_tail: STATIC STRING IDENTIFIER ASSIGN STRLIT semis PUBLIC STATIC VOID invalid_id_list semis
   93                    | STATIC STRING IDENTIFIER ASSIGN STRLIT semis
   94                    | STATIC VOID invalid_id_list semis
   95                    | STATIC method_header method_body
   96                    | STATIC error SEMICOLON
   97                    | error SEMICOLON

   98 invalid_id_list: IDENTIFIER
   99                | invalid_id_list COMMA IDENTIFIER

  100 semis: SEMICOLON
  101      | semis SEMICOLON

  102 assign_save: ASSIGN

  103 var_decl: type var_ids SEMICOLON
  104         | type IDENTIFIER LSQ expr RSQ SEMICOLON
  105         | type IDENTIFIER assign_save expr SEMICOLON
  106         | type var_ids error
  107         | type error SEMICOLON

  108 var_ids: IDENTIFIER
  109        | var_ids COMMA IDENTIFIER

  110 stmt: stmt_entry stmt_core

  111 stmt_entry: ε

  112 stmt_core: LBRACE stmt_list RBRACE
  113          | IF LPAR expr RPAR stmt
  114          | IF LPAR expr RPAR stmt ELSE stmt
  115          | IF LPAR error RPAR stmt
  116          | IF LPAR error RPAR stmt ELSE stmt
  117          | IF LPAR expr RETURN expr SEMICOLON
  118          | IF LPAR expr RETURN SEMICOLON
  119          | IF LPAR expr error stmt
  120          | IF LPAR expr error stmt ELSE stmt
  121          | WHILE LPAR expr RPAR stmt
  122          | WHILE LPAR error RPAR stmt
  123          | WHILE LPAR expr error stmt
  124          | RETURN expr SEMICOLON
  125          | RETURN SEMICOLON
  126          | RETURN error SEMICOLON
  127          | IDENTIFIER IDENTIFIER RESERVED ASSIGN expr SEMICOLON
  128          | IDENTIFIER ASSIGN PARSEINT LPAR expr RPAR SEMICOLON
  129          | IDENTIFIER ASSIGN expr SEMICOLON
  130          | IDENTIFIER ASSIGN error SEMICOLON
  131          | IDENTIFIER ASSIGN DOTLENGTH IDENTIFIER LPAR expr RPAR SEMICOLON
  132          | PRINT LPAR expr RPAR SEMICOLON
  133          | PRINT LPAR STRLIT RPAR SEMICOLON
  134          | PRINT LPAR error RPAR SEMICOLON
  135          | method_invocation SEMICOLON
  136          | PARSEINT LPAR error RPAR RPAR SEMICOLON
  137          | parse_args SEMICOLON
  138          | SEMICOLON
  139          | error SEMICOLON

  140 stmt_list: ε
  141          | stmt_list stmt

  142 expr: assign_expr

  143 assign_expr: IDENTIFIER ASSIGN assign_expr
  144            | or_expr

  145 or_expr: or_expr OR and_expr
  146        | and_expr

  147 and_expr: and_expr AND xor_expr
  148         | xor_expr

  149 xor_expr: xor_expr XOR eq_expr
  150         | eq_expr

  151 eq_expr: eq_expr EQ rel_expr
  152        | eq_expr NE rel_expr
  153        | rel_expr

  154 rel_expr: rel_expr LT shift_expr
  155         | rel_expr GT shift_expr
  156         | rel_expr LE shift_expr
  157         | rel_expr GE shift_expr
  158         | shift_expr

  159 shift_expr: shift_expr LSHIFT add_expr
  160           | shift_expr RSHIFT add_expr
  161           | add_expr

  162 add_expr: add_expr PLUS mul_expr
  163         | add_expr MINUS mul_expr
  164         | mul_expr

  165 mul_expr: mul_expr STAR unary_expr
  166         | mul_expr DIV unary_expr
  167         | mul_expr MOD unary_expr
  168         | unary_expr

  169 unary_expr: NOT unary_expr
  170           | MINUS unary_expr
  171           | PLUS unary_expr
  172           | primary_expr

  173 primary_expr: IDENTIFIER
  174             | IDENTIFIER DOTLENGTH
  175             | NATURAL
  176             | DECIMAL
  177             | BOOLLIT
  178             | method_invocation
  179             | parse_args
  180             | LPAR expr RPAR
  181             | LPAR error RPAR

  182 method_invocation: IDENTIFIER LPAR args_opt RPAR
  183                  | IDENTIFIER LPAR error RPAR

  184 args_opt: ε
  185         | expr_list

  186 expr_list: expr
  187          | expr_list COMMA expr
  188          | expr_list COMMA error

  189 parse_args: PARSEINT LPAR IDENTIFIER LSQ expr RSQ RPAR
  190           | PARSEINT LPAR error RPAR

  191 type: INT
  192     | DOUBLE
  193     | BOOL


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7 8 9 20 21 96 97 106 107 115 116 119 120 122 123 126 130 134 136 139 181 183 188 190
    IDENTIFIER <lexeme> (258) 1 10 11 15 16 17 18 19 20 21 22 23 24 25 28 29 30 41 92 93 98 99 104 105 108 109 127 128 129 130 131 143 173 174 182 183 189
    NATURAL <lexeme> (259) 30 42 175
    DECIMAL <lexeme> (260) 43 176
    STRLIT <lexeme> (261) 44 92 93 133
    BOOLLIT <lexeme> (262) 45 177
    CLASS (263) 1 46
    STATIC (264) 6 7 8 13 15 16 17 18 19 20 21 48 92 93 94 95 96
    RESERVED (265) 49 127
    BOOL (266) 50 193
    INT (267) 51 191
    DOUBLE (268) 52 192
    VOID (269) 15 18 19 21 24 25 53 92 94
    STRING (270) 15 29 30 37 54 92 93
    IF (271) 55 113 114 115 116 117 118 119 120
    ELSE (272) 56 114 116 120
    WHILE (273) 57 121 122 123
    RETURN (274) 58 117 118 124 125 126
    PRINT (275) 59 132 133 134
    PARSEINT (276) 60 128 136 189 190
    DOTLENGTH (277) 61 131 174
    INC (278) 62
    DEC (279) 63
    ARROW (280) 64
    ASSIGN (281) 65 92 93 102 127 128 129 130 131 143
    PLUS (282) 66 162 171
    MINUS (283) 67 163 170
    STAR (284) 68 165
    DIV (285) 69 166
    MOD (286) 70 167
    AND (287) 71 147
    OR (288) 72 145
    XOR (289) 73 149
    LSHIFT (290) 74 159
    RSHIFT (291) 75 160
    EQ (292) 76 151
    NE (293) 77 152
    LT (294) 78 154
    GT (295) 79 155
    LE (296) 80 156
    GE (297) 81 157
    NOT (298) 82 169
    LPAR (299) 15 16 17 18 19 20 21 22 23 24 25 83 113 114 115 116 117 118 119 120 121 122 123 128 131 132 133 134 136 180 181 182 183 189 190
    RPAR (300) 15 20 21 22 23 24 25 84 113 114 115 116 121 122 128 131 132 133 134 136 180 181 182 183 189 190
    LBRACE (301) 1 12 31 85 112
    RBRACE (302) 1 16 17 18 19 31 38 85 112
    LSQ (303) 15 29 30 86 104 189
    RSQ (304) 15 29 30 87 104 189
    COMMA (305) 11 27 89 99 109 187 188
    TAIL_DONE (306)
    SEMICOLON (307) 5 6 7 8 9 88 96 97 100 101 103 104 105 107 117 118 124 125 126 127 128 129 130 131 132 133 134 135 136 137 138 139
    PUBLIC (308) 6 7 8 13 15 16 17 18 19 20 21 47 91 92
    LOWER_THAN_ELSE (309)


Nonterminals, with rules where they appear

    $accept (55)
        on left: 0
    program <node> (56)
        on left: 1
        on right: 0
    class_body <node> (57)
        on left: 2 3 4 5
        on right: 1 3 4 5
    field_decl <node> (58)
        on left: 6 7 8 9
        on right: 3
    field_ids <node> (59)
        on left: 10 11
        on right: 6 11
    lbrace_save (60)
        on left: 12
        on right: 16 17 18 19
    method_decl <node> (61)
        on left: 13 15 16 17 18 19 20 21
        on right: 4
    $@1 (62)
        on left: 14
        on right: 15
    method_header <node> (63)
        on left: 22 23 24 25
        on right: 13 95
    param_list <node> (64)
        on left: 26 27
        on right: 16 18 23 25 27
    param_decl <node> (65)
        on left: 28 29 30
        on right: 26 27
    method_body <node> (66)
        on left: 31
        on right: 13 15 20 21 95
    method_body_items <node> (67)
        on left: 32 33 34 35 36
        on right: 16 17 18 19 31 33 34 35 36
    bad_string_start <node> (68)
        on left: 37
        on right: 35
    bad_string_tail (69)
        on left: 38
        on right: 35
    bad_string_items (70)
        on left: 39 40
        on right: 38 40 85
    bad_string_item (71)
        on left: 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89
        on right: 40
    invalid_public_decl (72)
        on left: 91
        on right: 33
    $@2 (73)
        on left: 90
        on right: 91
    invalid_public_tail (74)
        on left: 92 93 94 95 96 97
        on right: 91
    invalid_id_list (75)
        on left: 98 99
        on right: 92 94 99
    semis (76)
        on left: 100 101
        on right: 92 93 94 101
    assign_save (77)
        on left: 102
        on right: 105
    var_decl <node> (78)
        on left: 103 104 105 106 107
        on right: 34
    var_ids <node> (79)
        on left: 108 109
        on right: 103 106 109
    stmt <node> (80)
        on left: 110
        on right: 36 113 114 115 116 119 120 121 122 123 141
    stmt_entry <node> (81)
        on left: 111
        on right: 110
    stmt_core <node> (82)
        on left: 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137 138 139
        on right: 110
    stmt_list <node> (83)
        on left: 140 141
        on right: 112 141
    expr <node> (84)
        on left: 142
        on right: 104 105 113 114 117 118 119 120 121 123 124 127 128 129 131 132 180 186 187 189
    assign_expr <node> (85)
        on left: 143 144
        on right: 142 143
    or_expr <node> (86)
        on left: 145 146
        on right: 144 145
    and_expr <node> (87)
        on left: 147 148
        on right: 145 146 147
    xor_expr <node> (88)
        on left: 149 150
        on right: 147 148 149
    eq_expr <node> (89)
        on left: 151 152 153
        on right: 149 150 151 152
    rel_expr <node> (90)
        on left: 154 155 156 157 158
        on right: 151 152 153 154 155 156 157
    shift_expr <node> (91)
        on left: 159 160 161
        on right: 154 155 156 157 158 159 160
    add_expr <node> (92)
        on left: 162 163 164
        on right: 159 160 161 162 163
    mul_expr <node> (93)
        on left: 165 166 167 168
        on right: 162 163 164 165 166 167
    unary_expr <node> (94)
        on left: 169 170 171 172
        on right: 165 166 167 168 169 170 171
    primary_expr <node> (95)
        on left: 173 174 175 176 177 178 179 180 181
        on right: 172
    method_invocation <node> (96)
        on left: 182 183
        on right: 135 178
    args_opt <node> (97)
        on left: 184 185
        on right: 182
    expr_list <node> (98)
        on left: 186 187 188
        on right: 185 187 188
    parse_args <node> (99)
        on left: 189 190
        on right: 137 179
    type <node> (100)
        on left: 191 192 193
        on right: 6 8 16 17 20 22 23 28 103 104 105 106 107


State 0

    0 $accept: • program $end

    CLASS  shift, and go to state 1

    program  go to state 2


State 1

    1 program: CLASS • IDENTIFIER LBRACE class_body RBRACE

    IDENTIFIER  shift, and go to state 3


State 2

    0 $accept: program • $end

    $end  shift, and go to state 4


State 3

    1 program: CLASS IDENTIFIER • LBRACE class_body RBRACE

    LBRACE  shift, and go to state 5


State 4

    0 $accept: program $end •

    $default  accept


State 5

    1 program: CLASS IDENTIFIER LBRACE • class_body RBRACE

    $default  reduce using rule 2 (class_body)

    class_body  go to state 6


State 6

    1 program: CLASS IDENTIFIER LBRACE class_body • RBRACE
    3 class_body: class_body • field_decl
    4           | class_body • method_decl
    5           | class_body • SEMICOLON

    error      shift, and go to state 7
    RBRACE     shift, and go to state 8
    SEMICOLON  shift, and go to state 9
    PUBLIC     shift, and go to state 10

    field_decl   go to state 11
    method_decl  go to state 12


State 7

    9 field_decl: error • SEMICOLON

    SEMICOLON  shift, and go to state 13


State 8

    1 program: CLASS IDENTIFIER LBRACE class_body RBRACE •

    $default  reduce using rule 1 (program)


State 9

    5 class_body: class_body SEMICOLON •

    $default  reduce using rule 5 (class_body)


State 10

    6 field_decl: PUBLIC • STATIC type field_ids SEMICOLON
    7           | PUBLIC • STATIC error SEMICOLON
    8           | PUBLIC • STATIC type error SEMICOLON
   13 method_decl: PUBLIC • STATIC method_header method_body
   15            | PUBLIC • STATIC VOID IDENTIFIER LPAR LSQ $@1 RSQ STRING IDENTIFIER RPAR method_body
   16            | PUBLIC • STATIC type IDENTIFIER LPAR param_list lbrace_save method_body_items RBRACE
   17            | PUBLIC • STATIC type IDENTIFIER LPAR lbrace_save method_body_items RBRACE
   18            | PUBLIC • STATIC VOID IDENTIFIER LPAR param_list lbrace_save method_body_items RBRACE
   19            | PUBLIC • STATIC VOID IDENTIFIER LPAR lbrace_save method_body_items RBRACE
   20            | PUBLIC • STATIC type IDENTIFIER LPAR error RPAR method_body
   21            | PUBLIC • STATIC VOID IDENTIFIER LPAR error RPAR method_body

    STATIC  shift, and go to state 14


State 11

    3 class_body: class_body field_decl •

    $default  reduce using rule 3 (class_body)


State 12

    4 class_body: class_body method_decl •

    $default  reduce using rule 4 (class_body)


State 13

    9 field_decl: error SEMICOLON •

    $default  reduce using rule 9 (field_decl)


State 14

    6 field_decl: PUBLIC STATIC • type field_ids SEMICOLON
    7           | PUBLIC STATIC • error SEMICOLON
    8           | PUBLIC STATIC • type error SEMICOLON
   13 method_decl: PUBLIC STATIC • method_header method_body
   15            | PUBLIC STATIC • VOID IDENTIFIER LPAR LSQ $@1 RSQ STRING IDENTIFIER RPAR method_body
   16            | PUBLIC STATIC • type IDENTIFIER LPAR param_list lbrace_save method_body_items RBRACE
   17            | PUBLIC STATIC • type IDENTIFIER LPAR lbrace_save method_body_items RBRACE
   18            | PUBLIC STATIC • VOID IDENTIFIER LPAR param_list lbrace_save method_body_items RBRACE
   19            | PUBLIC STATIC • VOID IDENTIFIER LPAR lbrace_save method_body_items RBRACE
   20            | PUBLIC STATIC • type IDENTIFIER LPAR error RPAR method_body
   21            | PUBLIC STATIC • VOID IDENTIFIER LPAR error RPAR method_body

    error   shift, and go to state 15
    BOOL    shift, and go to state 16
    INT     shift, and go to state 17
    DOUBLE  shift, and go to state 18
    VOID    shift, and go to state 19

    method_header  go to state 20
    type           go to state 21


State 15

    7 field_decl: PUBLIC STATIC error • SEMICOLON

    SEMICOLON  shift, and go to state 22


State 16

  193 type: BOOL •

    $default  reduce using rule 193 (type)


State 17

  191 type: INT •

    $default  reduce using rule 191 (type)


State 18

  192 type: DOUBLE •

    $default  reduce using rule 192 (type)


State 19

   15 method_decl: PUBLIC STATIC VOID • IDENTIFIER LPAR LSQ $@1 RSQ STRING IDENTIFIER RPAR method_body
   18            | PUBLIC STATIC VOID • IDENTIFIER LPAR param_list lbrace_save method_body_items RBRACE
   19            | PUBLIC STATIC VOID • IDENTIFIER LPAR lbrace_save method_body_items RBRACE
   21            | PUBLIC STATIC VOID • IDENTIFIER LPAR error RPAR method_body
   24 method_header: VOID • IDENTIFIER LPAR RPAR
   25              | VOID • IDENTIFIER LPAR param_list RPAR

    IDENTIFIER  shift, and go to state 23


State 20

   13 method_decl: PUBLIC STATIC method_header • method_body

    LBRACE  shift, and go to state 24

    method_body  go to state 25


State 21

    6 field_decl: PUBLIC STATIC type • field_ids SEMICOLON
    8           | PUBLIC STATIC type • error SEMICOLON
   16 method_decl: PUBLIC STATIC type • IDENTIFIER LPAR param_list lbrace_save method_body_items RBRACE
   17            | PUBLIC STATIC type • IDENTIFIER LPAR lbrace_save method_body_items RBRACE
   20            | PUBLIC STATIC type • IDENTIFIER LPAR error RPAR method_body
   22 method_header: type • IDENTIFIER LPAR RPAR
   23              | type • IDENTIFIER LPAR param_list RPAR

    error       shift, and go to state 26
    IDENTIFIER  shift, and go to state 27

    field_ids  go to state 28


State 22

    7 field_decl: PUBLIC STATIC error SEMICOLON •

    $default  reduce using rule 7 (field_decl)


State 23

   15 method_decl: PUBLIC STATIC VOID IDENTIFIER • LPAR LSQ $@1 RSQ STRING IDENTIFIER RPAR method_body
   18            | PUBLIC STATIC VOID IDENTIFIER • LPAR param_list lbrace_save method_body_items RBRACE
   19            | PUBLIC STATIC VOID IDENTIFIER • LPAR lbrace_save method_body_items RBRACE
   21            | PUBLIC STATIC VOID IDENTIFIER • LPAR error RPAR method_body
   24 method_header: VOID IDENTIFIER • LPAR RPAR
   25              | VOID IDENTIFIER • LPAR param_list RPAR

    LPAR  shift, and go to state 29


State 24

   31 method_body: LBRACE • method_body_items RBRACE

    $default  reduce using rule 32 (method_body_items)

    method_body_items  go to state 30


State 25

   13 method_decl: PUBLIC STATIC method_header method_body •

    $default  reduce using rule 13 (method_decl)


State 26

    8 field_decl: PUBLIC STATIC type error • SEMICOLON

    SEMICOLON  shift, and go to state 31


State 27

   10 field_ids: IDENTIFIER •
   16 method_decl: PUBLIC STATIC type IDENTIFIER • LPAR param_list lbrace_save method_body_items RBRACE
   17            | PUBLIC STATIC type IDENTIFIER • LPAR lbrace_save method_body_items RBRACE
   20            | PUBLIC STATIC type IDENTIFIER • LPAR error RPAR method_body
   22 method_header: type IDENTIFIER • LPAR RPAR
   23              | type IDENTIFIER • LPAR param_list RPAR

    LPAR  shift, and go to state 32

    $default  reduce using rule 10 (field_ids)


State 28

    6 field_decl: PUBLIC STATIC type field_ids • SEMICOLON
   11 field_ids: field_ids • COMMA IDENTIFIER

    COMMA      shift, and go to state 33
    SEMICOLON  shift, and go to state 34


State 29

   15 method_decl: PUBLIC STATIC VOID IDENTIFIER LPAR • LSQ $@1 RSQ STRING IDENTIFIER RPAR method_body
   18            | PUBLIC STATIC VOID IDENTIFIER LPAR • param_list lbrace_save method_body_items RBRACE
   19            | PUBLIC STATIC VOID IDENTIFIER LPAR • lbrace_save method_body_items RBRACE
   21            | PUBLIC STATIC VOID IDENTIFIER LPAR • error RPAR method_body
   24 method_header: VOID IDENTIFIER LPAR • RPAR
   25              | VOID IDENTIFIER LPAR • param_list RPAR

    error   shift, and go to state 35
    BOOL    shift, and go to state 16
    INT     shift, and go to state 17
    DOUBLE  shift, and go to state 18
    STRING  shift, and go to state 36
    RPAR    shift, and go to state 37
    LBRACE  shift, and go to state 38
    LSQ     shift, and go to state 39

    lbrace_save  go to state 40
    param_list   go to state 41
    param_decl   go to state 42
    type         go to state 43


State 30

   31 method_body: LBRACE method_body_items • RBRACE
   33 method_body_items: method_body_items • invalid_public_decl
   34                  | method_body_items • var_decl
   35                  | method_body_items • bad_string_start bad_string_tail
   36                  | method_body_items • stmt

    BOOL    shift, and go to state 16
    INT     shift, and go to state 17
    DOUBLE  shift, and go to state 18
    STRING  shift, and go to state 44
    RBRACE  shift, and go to state 45
    PUBLIC  shift, and go to state 46

    $default  reduce using rule 111 (stmt_entry)

    bad_string_start     go to state 47
    invalid_public_decl  go to state 48
    var_decl             go to state 49
    stmt                 go to state 50
    stmt_entry           go to state 51
    type                 go to state 52


State 31

    8 field_decl: PUBLIC STATIC type error SEMICOLON •

    $default  reduce using rule 8 (field_decl)


State 32

   16 method_decl: PUBLIC STATIC type IDENTIFIER LPAR • param_list lbrace_save method_body_items RBRACE
   17            | PUBLIC STATIC type IDENTIFIER LPAR • lbrace_save method_body_items RBRACE
   20            | PUBLIC STATIC type IDENTIFIER LPAR • error RPAR method_body
   22 method_header: type IDENTIFIER LPAR • RPAR
   23              | type IDENTIFIER LPAR • param_list RPAR

    error   shift, and go to state 53
    BOOL    shift, and go to state 16
    INT     shift, and go to state 17
    DOUBLE  shift, and go to state 18
    STRING  shift, and go to state 36
    RPAR    shift, and go to state 54
    LBRACE  shift, and go to state 38

    lbrace_save  go to state 55
    param_list   go to state 56
    param_decl   go to state 42
    type         go to state 43


State 33

   11 field_ids: field_ids COMMA • IDENTIFIER

    IDENTIFIER  shift, and go to state 57


State 34

    6 field_decl: PUBLIC STATIC type field_ids SEMICOLON •

    $default  reduce using rule 6 (field_decl)


State 35

   21 method_decl: PUBLIC STATIC VOID IDENTIFIER LPAR error • RPAR method_body

    RPAR  shift, and go to state 58


State 36

   29 param_decl: STRING • LSQ RSQ IDENTIFIER
   30           | STRING • LSQ NATURAL RSQ IDENTIFIER

    LSQ  shift, and go to state 59


State 37

   24 method_header: VOID IDENTIFIER LPAR RPAR •

    $default  reduce using rule 24 (method_header)


State 38

   12 lbrace_save: LBRACE •

    $default  reduce using rule 12 (lbrace_save)


State 39

   15 method_decl: PUBLIC STATIC VOID IDENTIFIER LPAR LSQ • $@1 RSQ STRING IDENTIFIER RPAR method_body

    $default  reduce using rule 14 ($@1)

    $@1  go to state 60


State 40

   19 method_decl: PUBLIC STATIC VOID IDENTIFIER LPAR lbrace_save • method_body_items RBRACE

    $default  reduce using rule 32 (method_body_items)

    method_body_items  go to state 61


State 41

   18 method_decl: PUBLIC STATIC VOID IDENTIFIER LPAR param_list • lbrace_save method_body_items RBRACE
   25 method_header: VOID IDENTIFIER LPAR param_list • RPAR
   27 param_list: param_list • COMMA param_decl

    RPAR    shift, and go to state 62
    LBRACE  shift, and go to state 38
    COMMA   shift, and go to state 63

    lbrace_save  go to state 64


State 42

   26 param_list: param_decl •

    $default  reduce using rule 26 (param_list)


State 43

   28 param_decl: type • IDENTIFIER

    IDENTIFIER  shift, and go to state 65


State 44

   37 bad_string_start: STRING •

    $default  reduce using rule 37 (bad_string_start)


State 45

   31 method_body: LBRACE method_body_items RBRACE •

    $default  reduce using rule 31 (method_body)


State 46

   91 invalid_public_decl: PUBLIC • $@2 invalid_public_tail

    $default  reduce using rule 90 ($@2)

    $@2  go to state 66


State 47

   35 method_body_items: method_body_items bad_string_start • bad_string_tail

    $default  reduce using rule 39 (bad_string_items)

    bad_string_tail   go to state 67
    bad_string_items  go to state 68


State 48

   33 method_body_items: method_body_items invalid_public_decl •

    $default  reduce using rule 33 (method_body_items)


State 49

   34 method_body_items: method_body_items var_decl •

    $default  reduce using rule 34 (method_body_items)


State 50

   36 method_body_items: method_body_items stmt •

    $default  reduce using rule 36 (method_body_items)


State 51

  110 stmt: stmt_entry • stmt_core

    error       shift, and go to state 69
    IDENTIFIER  shift, and go to state 70
    IF          shift, and go to state 71
    WHILE       shift, and go to state 72
    RETURN      shift, and go to state 73
    PRINT       shift, and go to state 74
    PARSEINT    shift, and go to state 75
    LBRACE      shift, and go to state 76
    SEMICOLON   shift, and go to state 77

    stmt_core          go to state 78
    method_invocation  go to state 79
    parse_args         go to state 80


State 52

  103 var_decl: type • var_ids SEMICOLON
  104         | type • IDENTIFIER LSQ expr RSQ SEMICOLON
  105         | type • IDENTIFIER assign_save expr SEMICOLON
  106         | type • var_ids error
  107         | type • error SEMICOLON

    error       shift, and go to state 81
    IDENTIFIER  shift, and go to state 82

    var_ids  go to state 83


State 53

   20 method_decl: PUBLIC STATIC type IDENTIFIER LPAR error • RPAR method_body

    RPAR  shift, and go to state 84


State 54

   22 method_header: type IDENTIFIER LPAR RPAR •

    $default  reduce using rule 22 (method_header)


State 55

   17 method_decl: PUBLIC STATIC type IDENTIFIER LPAR lbrace_save • method_body_items RBRACE

    $default  reduce using rule 32 (method_body_items)

    method_body_items  go to state 85


State 56

   16 method_decl: PUBLIC STATIC type IDENTIFIER LPAR param_list • lbrace_save method_body_items RBRACE
   23 method_header: type IDENTIFIER LPAR param_list • RPAR
   27 param_list: param_list • COMMA param_decl

    RPAR    shift, and go to state 86
    LBRACE  shift, and go to state 38
    COMMA   shift, and go to state 63

    lbrace_save  go to state 87


State 57

   11 field_ids: field_ids COMMA IDENTIFIER •

    $default  reduce using rule 11 (field_ids)


State 58

   21 method_decl: PUBLIC STATIC VOID IDENTIFIER LPAR error RPAR • method_body

    LBRACE  shift, and go to state 24

    method_body  go to state 88


State 59

   29 param_decl: STRING LSQ • RSQ IDENTIFIER
   30           | STRING LSQ • NATURAL RSQ IDENTIFIER

    NATURAL  shift, and go to state 89
    RSQ      shift, and go to state 90


State 60

   15 method_decl: PUBLIC STATIC VOID IDENTIFIER LPAR LSQ $@1 • RSQ STRING IDENTIFIER RPAR method_body

    RSQ  shift, and go to state 91


State 61

   19 method_decl: PUBLIC STATIC VOID IDENTIFIER LPAR lbrace_save method_body_items • RBRACE
   33 method_body_items: method_body_items • invalid_public_decl
   34                  | method_body_items • var_decl
   35                  | method_body_items • bad_string_start bad_string_tail
   36                  | method_body_items • stmt

    BOOL    shift, and go to state 16
    INT     shift, and go to state 17
    DOUBLE  shift, and go to state 18
    STRING  shift, and go to state 44
    RBRACE  shift, and go to state 92
    PUBLIC  shift, and go to state 46

    $default  reduce using rule 111 (stmt_entry)

    bad_string_start     go to state 47
    invalid_public_decl  go to state 48
    var_decl             go to state 49
    stmt                 go to state 50
    stmt_entry           go to state 51
    type                 go to state 52


State 62

   25 method_header: VOID IDENTIFIER LPAR param_list RPAR •

    $default  reduce using rule 25 (method_header)


State 63

   27 param_list: param_list COMMA • param_decl

    BOOL    shift, and go to state 16
    INT     shift, and go to state 17
    DOUBLE  shift, and go to state 18
    STRING  shift, and go to state 36

    param_decl  go to state 93
    type        go to state 43


State 64

   18 method_decl: PUBLIC STATIC VOID IDENTIFIER LPAR param_list lbrace_save • method_body_items RBRACE

    $default  reduce using rule 32 (method_body_items)

    method_body_items  go to state 94


State 65

   28 param_decl: type IDENTIFIER •

    $default  reduce using rule 28 (param_decl)


State 66

   91 invalid_public_decl: PUBLIC $@2 • invalid_public_tail

    error   shift, and go to state 95
    STATIC  shift, and go to state 96

    invalid_public_tail  go to state 97


State 67

   35 method_body_items: method_body_items bad_string_start bad_string_tail •

    $default  reduce using rule 35 (method_body_items)


State 68

   38 bad_string_tail: bad_string_items • RBRACE
   40 bad_string_items: bad_string_items • bad_string_item

    IDENTIFIER  shift, and go to state 98
    NATURAL     shift, and go to state 99
    DECIMAL     shift, and go to state 100
    STRLIT      shift, and go to state 101
    BOOLLIT     shift, and go to state 102
    CLASS       shift, and go to state 103
    STATIC      shift, and go to state 104
    RESERVED    shift, and go to state 105
    BOOL        shift, and go to state 106
    INT         shift, and go to state 107
    DOUBLE      shift, and go to state 108
    VOID        shift, and go to state 109
    STRING      shift, and go to state 110
    IF          shift, and go to state 111
    ELSE        shift, and go to state 112
    WHILE       shift, and go to state 113
    RETURN      shift, and go to state 114
    PRINT       shift, and go to state 115
    PARSEINT    shift, and go to state 116
    DOTLENGTH   shift, and go to state 117
    INC         shift, and go to state 118
    DEC         shift, and go to state 119
    ARROW       shift, and go to state 120
    ASSIGN      shift, and go to state 121
    PLUS        shift, and go to state 122
    MINUS       shift, and go to state 123
    STAR        shift, and go to state 124
    DIV         shift, and go to state 125
    MOD         shift, and go to state 126
    AND         shift, and go to state 127
    OR          shift, and go to state 128
    XOR         shift, and go to state 129
    LSHIFT      shift, and go to state 130
    RSHIFT      shift, and go to state 131
    EQ          shift, and go to state 132
    NE          shift, and go to state 133
    LT          shift, and go to state 134
    GT          shift, and go to state 135
    LE          shift, and go to state 136
    GE          shift, and go to state 137
    NOT         shift, and go to state 138
    LPAR        shift, and go to state 139
    RPAR        shift, and go to state 140
    LBRACE      shift, and go to state 141
    RBRACE      shift, and go to state 142
    LSQ         shift, and go to state 143
    RSQ         shift, and go to state 144
    COMMA       shift, and go to state 145
    SEMICOLON   shift, and go to state 146
    PUBLIC      shift, and go to state 147

    bad_string_item  go to state 148


State 69

  139 stmt_core: error • SEMICOLON

    SEMICOLON  shift, and go to state 149


State 70
